# velux2mqtt

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  devenv.nix  justfile
.github/workflows/: ci.yml  docker.yml
docs/: info.md
src/: bridge.rs  hassdiscovery.rs  lib.rs  mqtt.rs  veluxnode.rs
src/klf200/: command.rs  command_id.rs  connection.rs  error.rs  frame.rs  mod.rs  response.rs  slip.rs  types.rs
tests/: connection_actor.rs  hardware_klf.rs  mqtt_contract.rs  veluxnode.rs  wire_protocol.rs
