[package]
name = "velux2mqtt"
version = "0.1.0"
edition = "2024"
description = "Async Rust client and MQTT bridge for the VELUX KLF 200 gateway"
license = "MIT"
repository = "https://github.com/dirkvdb/velux2mqtt"
default-run = "velux2mqtt"
include = [
    "/src/**",
    "/tests/**",
    "/examples/mqtt-probe.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/docs/api-parity.md",
    "/docs/migration.md",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.12"
clap = { version = "4.6", features = ["derive", "env"] }
clap-verbosity-flag = "3.0"
env_logger = "0.11"
fastrand = "2.4"
log = "0.4"
rumqttc = { version = "0.25", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }

[dev-dependencies]
proptest = "1.11"

[profile.release]
lto = "thin"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
